# surgease-IBD-config

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
conf/: config.yaml  local_example.yaml  score_identifiers.yaml
conf/dataset/: overlap.yaml  subsample1.yaml
conf/pl_logging/: wandb.yaml
conf/project/: cloudfactory.yaml  reference.yaml
src/: build_csv_from_label_rows.py  classification.py  constants.py  inference.py  inference2.py  label_logs_stats.py  label_row_stats.py  metrics.py  prepara_dataset_splits.py  print_project_info.py  test_average.ipynb  tmp.ipynb  utils.py
src/classes/: dataset.py  project.py
src/data/: __init__.py  dataset.py  transforms.py
src/encord_utils/: download.py
src/losses/: wce.py
src/model/: head.py  lightning.py  resnet.py
